# NerfSpiderControl

./: CMakeLists.txt  README.md  auto-run.sh  auto-stop.sh
sample/: CMakeLists.txt  SampleBarbette.cpp  SampleFaceTrack.cpp  SampleGeometryDetect.cpp  SampleLaserControl.cpp  SampleShootControl.cpp  SampleShooterControl.cpp  SampleWalk.cpp
src/: NerfSpiderControl.cpp  NerfSpiderControl.hpp
